@@ -2,8 +2,4 @@ Content-Type: application/X-atf-atffile; version="1"
 
 prop: test-suite = bind9
 
-tp: dns
-tp: irs
-tp: isc
-tp: isccfg
-tp: lwres
+tp: tests
