@@ -1,0 +1,1 @@
+nameserver 10.0.0.1
