@@ -1,0 +1,1 @@
+option ndots:2
