@@ -1,0 +1,1 @@
+search example.com example.net
