@@ -34,8 +34,6 @@ struct isc_sockaddr {
 	ISC_LINK(struct isc_sockaddr)	link;
 };
 
-typedef ISC_LIST(struct isc_sockaddr)	isc_sockaddrlist_t;
-
 #define ISC_SOCKADDR_CMPADDR	  0x0001	/*%< compare the address
 						 *   sin_addr/sin6_addr */
 #define ISC_SOCKADDR_CMPPORT 	  0x0002	/*%< compare the port
