@@ -1,3 +1,7 @@
+4492.	[bug]		irs_resconf_load failed to initialise sortlistnxt
+			causing bad writes if resolv.conf contained a
+			sortlist directive. [RT #43459]
+
 4491.	[bug]		Improve message emitted when testing whether sendmsg
 			works with TOS/TCLASS fails. [RT #43483]
 
